reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__replay__rebuild.rs_line_431_col_5.log

*** crates/tracewake-core/src/replay/rebuild.rs:431:5: replace phase3a_failure -> Phase3AReplayFailure with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/replay/rebuild.rs
+++ replace phase3a_failure -> Phase3AReplayFailure with Default::default()
@@ -423,40 +423,17 @@
     event
         .payload
         .iter()
         .find(|field| field.key == key)
         .map(|field| field.value.as_str())
 }
 
 fn phase3a_failure(event: &EventEnvelope, issue: impl Into<String>) -> Phase3AReplayFailure {
-    let payload = event
-        .payload
-        .iter()
-        .map(|field| (field.key.as_str(), field.value.as_str()))
-        .collect::<std::collections::BTreeMap<_, _>>();
-    Phase3AReplayFailure {
-        event_position: event.global_order,
-        event_kind: event.event_type,
-        schema_version: event.event_schema_version.as_str().to_string(),
-        issue: issue.into(),
-        actor_id: event
-            .actor_id
-            .as_ref()
-            .map(|id| id.as_str().to_string())
-            .or_else(|| payload.get("actor_id").map(|value| (*value).to_string())),
-        routine_id: payload
-            .get("routine_execution_id")
-            .or_else(|| payload.get("routine_id"))
-            .map(|value| (*value).to_string()),
-        trace_id: payload
-            .get("trace_id")
-            .or_else(|| payload.get("decision_trace_id"))
-            .map(|value| (*value).to_string()),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn diff_physical_state(expected: &PhysicalState, actual: &PhysicalState) -> Vec<String> {
     let mut diffs = Vec::new();
     if expected.actors != actual.actors {
         diffs.push(format!(
             "actors expected={:?} actual={:?}",
             expected.actors, actual.actors


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/replay/rebuild.rs` has changed (1781911331.167923729s, 4s after last build at 1781911327.951923780s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Phase3AReplayFailure: Default` is not satisfied
   --> crates/tracewake-core/src/replay/rebuild.rs:431:5
    |
431 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Phase3AReplayFailure`
   --> crates/tracewake-core/src/replay/rebuild.rs:41:1
    |
 41 | pub struct Phase3AReplayFailure {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
